new file:   blog/mod/mspr/MSPR.java